--- a/photoplanet/templates/base.html
+++ b/photoplanet/templates/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load servertime %}
 <!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
@@ -78,7 +79,7 @@
       <hr />
       <div class="row">
         <div class="large-6 columns">
-          <p>&copy; Copyright no one at all. Go to town.</p>
+          <p>&copy; Copyright no one at all. Go to town. {% server_time %}</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
