--- a/photoplanet/templates/feedback/fb.html
+++ b/photoplanet/templates/feedback/fb.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load servertime %}
 <!DOCTYPE html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
