Add my tag {% server_time %}

--- a/photoplanet/templates/feedback/fb.html
+++ b/photoplanet/templates/feedback/fb.html
@@ -85,7 +85,7 @@
 
       <div class="panel">
         <h5>Sidebar</h5>
-        <p>Some information may go here.</p>
+        <p>Some information may go here. {% server_time %}</p>
         <a href="#">Read More &rarr;</a>
       </div>
 
