--- a/photoplanet/templates/photoplanet/all.html
+++ b/photoplanet/templates/photoplanet/all.html
@@ -180,7 +180,7 @@
 
       <div class="panel">
         <h5>Sidebar</h5>
-        <p>Some information may go here.</p>
+        <p>Some information may go here. {% server_time %}</p>
         <a href="#">Read More &rarr;</a>
       </div>
 
