--- a/photoplanet/templates/photoplanet/all.html
+++ b/photoplanet/templates/photoplanet/all.html
@@ -12,7 +12,7 @@
 {% block content %}
     <div class="large-9 columns" role="content">
 
-      {% for p in photos %}
+      {% for p in photo_list %}
 
       <article>
 
