--- a/photoplanet/templates/users/login.html
+++ b/photoplanet/templates/users/login.html
@@ -14,6 +14,7 @@
 
             <ul>
               <li><a href="{% url "socialauth_begin" "instagram" %}{% if next %}?next={{ next }}{% endif %}">Instagram</a></li>
+              <li><a href="{% url "socialauth_begin" "google-oauth2" %}{% if next %}?next={{ next }}{% endif %}">Google</a></li>
               <li>...
             </ul>
 
