--- a/photoplanet/templates/base.html
+++ b/photoplanet/templates/base.html
@@ -16,7 +16,13 @@
   <link rel="stylesheet" href="{% static "css/pp.css" %}">
   {% endblock %}
 
-  <script src="{% static "js/vendor/custom.modernizr.js" %}"></script>
+{% block js %}
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="{% static "js/csrf.js" %}"></script>
+  <script type="text/javascript">
+          window.PHOTO = {};
+  </script>
+{% endblock js %}
 
 </head>
 <body>
