--- a/photoplanet/templates/photoplanet/photo_detail.html
+++ b/photoplanet/templates/photoplanet/photo_detail.html
@@ -3,6 +3,10 @@
 {% load servertime %}
 
 
+{% block js %} {{ block.super }}
+  <script src="{% static "js/vote.js" %}"></script>
+{% endblock js %}
+
 {% block content %}
     <div class="large-9 columns" role="content">
 
