--- a/photoplanet/templates/base.html
+++ b/photoplanet/templates/base.html
@@ -17,7 +17,7 @@
   {% endblock %}
 
 {% block js %}
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="{% static "js/csrf.js" %}"></script>
   <script type="text/javascript">
           window.PHOTO = {};
