--- a/photoplanet/templates/photoplanet/photo_detail.html
+++ b/photoplanet/templates/photoplanet/photo_detail.html
@@ -22,11 +22,7 @@
             <h6 class="show-for-small"><a href="{% instagram_url photo.username %}" target="_blank">@{{ photo.username }}</a></h6>
             <div class="time">
                 {{ photo.created_time }}
-            likes: {{ photo.like_count }}
-            </div>
-            <div class="voting">
-                          <a href="#">up</a> (0) |
-                          <a href="#">down</a> (0)
+            likes: {{ photo.like_count }}, votes: <span class="js-vote-{{ p.pk }}">{{ p.vote_count }}</span>
             </div>
           </div>
         </div>
