--- a/photoplanet/templates/photoplanet/all.html
+++ b/photoplanet/templates/photoplanet/all.html
@@ -71,6 +71,9 @@
           </ul>
         </div>
       </div>
+      <div class="row">
+        <a href="{% url "load-photos" %}">Load more recent photos</a>
+      </div>
 
     </div
 {% endblock content %}
