Add Github login template

--- a/photoplanet/templates/users/login.html
+++ b/photoplanet/templates/users/login.html
@@ -16,6 +16,7 @@
               <li><a href="{% url "socialauth_begin" "instagram" %}{% if next %}?next={{ next }}{% endif %}">Instagram</a></li>
               <li><a href="{% url "socialauth_begin" "google-oauth2" %}{% if next %}?next={{ next }}{% endif %}">Google</a></li>
 	      <li><a href="{% url "socialauth_begin" "twitter" %}{% if next %}?next={{ next }}{% endif %}">Twitter</a></li>
+              <li><a href="{% url "socialauth_begin" "github" %}{% if next %}?next={{ next }}{% endif %}">Github</a></li>
               <li>...
             </ul>
 
