Add VK login template

--- a/photoplanet/templates/users/login.html
+++ b/photoplanet/templates/users/login.html
@@ -17,6 +17,7 @@
               <li><a href="{% url "socialauth_begin" "google-oauth2" %}{% if next %}?next={{ next }}{% endif %}">Google</a></li>
 	      <li><a href="{% url "socialauth_begin" "twitter" %}{% if next %}?next={{ next }}{% endif %}">Twitter</a></li>
               <li><a href="{% url "socialauth_begin" "github" %}{% if next %}?next={{ next }}{% endif %}">Github</a></li>
+              <li><a href="{% url "socialauth_begin" "vk" %}{% if next %}?next={{ next }}{% endif %}">VK (comming soon)</a></li>
               <li>...
             </ul>
 
