--- a/photoplanet/templates/photoplanet/photo_detail.html
+++ b/photoplanet/templates/photoplanet/photo_detail.html
@@ -22,7 +22,7 @@
             <h6 class="show-for-small"><a href="{% instagram_url photo.username %}" target="_blank">@{{ photo.username }}</a></h6>
             <div class="time">
                 {{ photo.created_time }}
-            likes: {{ photo.like_count }}, votes: <span class="js-vote-{{ p.pk }}">{{ p.vote_count }}</span>
+            likes: {{ photo.like_count }}, votes: <span class="js-vote-{{ photo.pk }}">{{ photo.vote_count }}</span>
             </div>
           </div>
         </div>
