Return custom templatetage _server_time_

--- a/photoplanet/templates/base.html
+++ b/photoplanet/templates/base.html
@@ -81,6 +81,7 @@
         {% endif %}
         </p>
         <p><a href="{% url 'feedback' %}">Give some feedback</a></p>
+	<p>{% server_time %}</p>
       </div>
 
     </aside>
